<resources>
    <string name="app_name">Utilidades</string>
    <string name="strPreferencias">Preferencias</string>
    <string name="strAbout">Acerca de...</string>
    <string name="strSuma">+</string>
    <string name="strResta">-</string>
    <string name="strMultiplicacion">x</string>
    <string name="strDivision">÷</string>
    <string name="strElevar">X^Y</string>
    <string name="strRaiz">sqrt(x)</string>
    <string name="strCantidad">Cantidad:</string>
    <string name="strDivisa1">Cambiar de...</string>
    <string name="strDivisa2">A...</string>
    <string name="strCalculadora">Calculadora</string>
    <string name="strConversor">Conversor</string>
    <string name="strCalculadoraAclaracion">En la operación SQRT(x), solo se realizará la raíz cuadrada del primer número</string>
    <string name="strConvertir">Convertir</string>
    <string name="strListaCompra">Lista de la compra</string>
    <string name="strAnadir">Añadir</string>
    <string name="strTipoProducto">Tipo de producto:</string>
    <string name="strNombreProducto">Nombre del producto:</string>
    <string name="strPrecio">Precio:</string>
    <string name="strInfo">Info</string>
    <string name="strDetalles">Detalles</string>
    <string name="strDetalle">Detalle</string>
    <string name="strBorrar">Borrar</string>
    <string name="strUsuario">Usuario</string>
    <string name="strFarmacias">Farmacias</string>
    <string name="strNombre">Nombre:</string>
    <string name="strTelefono">Teléfono:</string>
    <string name="strDireccion">Dirección:</string>
    <string name="strConecta">Conecta 4 (1 jugador) </string>
    <string name="srtConectaAmigo">Conecta 4 (2 jugadores)</string>
    <string name="strTres">3 en raya (1 jugador)</string>
    <string name="strTresAmigo">3 en raya (2 jugadores)</string>
    <string name="strJuegos">Juegos</string>
    <string name="strComprobarFarmacias">Comprobar farmacias en tu zona</string>
    <string name="strOrdenarPorCantidad">Ordenar por cantidad</string>
    <string name="strOrdenarPorCantidadDescripcion">Ordenar los productos por cantidad en lugar de por orden alfabético</string>
    <string name="strOrdenDescendente">Orden descendente</string>
    <string name="strOrdenDescendenteDescripcion">Ordenar los productos de mayor a menor en lugar de menor a mayor</string>
    <string name="strCalcularTotal">Calcular total</string>
    <string name="strPrimerNumero">Escribe el primer número...</string>
    <string name="strSegundoNumero">Escribe el segundo número...</string>
</resources>