<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/strListaCompra">

        <CheckBoxPreference
            android:id="@+id/prefCantidad"
            android:defaultValue="false"
            android:key="preferencias_cantidad"
            android:summary="@string/strOrdenarPorCantidadDescripcion"
            android:title="@string/strOrdenarPorCantidad" />
        <CheckBoxPreference
            android:id="@+id/prefDescendente"
            android:defaultValue="false"
            android:key="preferencias_descendente"
            android:summary="@string/strOrdenDescendenteDescripcion"
            android:title="@string/strOrdenDescendente" />
    </PreferenceCategory>
</PreferenceScreen>