<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="casual"
        android:gravity="center_horizontal|center_vertical"
        android:text="Utilidades"
        android:textAlignment="center"
        android:textSize="34sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bMainCalculadora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#3AA84D"
            android:insetLeft="10dp"
            android:insetRight="10dp"
            android:text="@string/strCalculadora"
            tools:text="@string/strCalculadora" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bMainConversor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#2B47F8"
            android:insetLeft="10dp"
            android:insetRight="10dp"
            android:text="@string/strConversor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bMainListaCompra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#E1701A"
            android:insetLeft="10dp"
            android:insetRight="10dp"
            android:text="@string/strListaCompra" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bMainFarmacias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_red_dark"
            android:insetLeft="10dp"
            android:insetRight="10dp"
            android:text="@string/strFarmacias" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="casual"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/strJuegos"
        android:textAlignment="center"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bMainConecta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_200"
            android:insetLeft="10dp"
            android:insetRight="10dp"
            android:text="@string/strConecta" />

        <Button
            android:id="@+id/bMainConectaAmigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#03D2AA"
            android:insetLeft="10dp"
            android:insetRight="10dp"
            android:text="@string/srtConectaAmigo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bMainTres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_700"
            android:insetLeft="10dp"
            android:insetRight="10dp"
            android:text="@string/strTres" />

        <Button
            android:id="@+id/bMainTresAmigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#017882"
            android:insetLeft="10dp"
            android:insetRight="10dp"
            android:text="@string/strTresAmigo" />
    </LinearLayout>

</LinearLayout>